[package]
name = "lumix_mark"
version = "0.1.0"
edition = "2024"

[dependencies]
image = "0.25.6"
imageproc = "0.25"
ab_glyph = "0.2.31"
rexif = "0.7.5"
rayon = "1.11.0"
clap = { version = "4.5.46", features = ["derive"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
debug = false
